# Oscilloscope_MCP

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  MCP_INTEGRATION_TEST.md  MCP_Oscilloscope.md  MICROPHONE_TEST.md  README.md  TESTING_GUIDE.md  WINDOWS_SETUP.md  claude_desktop_config.json  error  mic_oscilloscope_test.py  mic_simple_test.py  microphone_mcp_client.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_mic_test.txt  smithery.yaml  start-mcp-server.bat  start-mcp-server.ps1  start_mcp_server.py  test_mcp_server.py  tsconfig.json
.claude/: settings.local.json
src/: index.ts  server.ts
src/oscilloscope_mcp/: __init__.py  cli.py  mcp_server.py  server.py
src/oscilloscope_mcp/hardware/: __init__.py  adc_interface.py  base.py  ethernet_backend.py  interface.py  pcie_backend.py  simulation.py  usb_backend.py
src/oscilloscope_mcp/measurements/: __init__.py  analyzer.py
src/oscilloscope_mcp/prompts/: __init__.py  templates.py
src/oscilloscope_mcp/protocols/: __init__.py  decoder.py
src/oscilloscope_mcp/resources/: __init__.py  manager.py
src/oscilloscope_mcp/signal_processing/: __init__.py  engine.py  fft.py  filters.py  windowing.py
tests/: conftest.py  test_adc_interface.py  test_hardware_backends.py  test_mcp_server.py  test_measurements.py  test_protocols.py  test_resources.py  test_signal_processing.py
